@@ -1,16 +1,19 @@
 package com.rauio.smartdangjian.server.content.service.category;
 
-import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
-import com.rauio.smartdangjian.exception.BusinessException;
-import com.rauio.smartdangjian.security.CurrentUserPrincipal;
-import com.rauio.smartdangjian.server.content.constants.CategoryErrorConstants;
-import com.rauio.smartdangjian.server.content.mapper.CategoryMapper;
-import com.rauio.smartdangjian.server.content.pojo.convertor.CategoryConvertor;
-import com.rauio.smartdangjian.server.content.pojo.dto.CategoryDto;
-import com.rauio.smartdangjian.server.content.pojo.entity.Category;
-import com.rauio.smartdangjian.server.content.pojo.vo.CategoryVO;
-import com.rauio.smartdangjian.utils.SecurityUtils;
-import com.rauio.smartdangjian.utils.spec.UserType;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.doReturn;
+import static org.mockito.Mockito.lenient;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.mockStatic;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -22,19 +25,17 @@ import org.mockito.MockedStatic;
 import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.doReturn;
-import static org.mockito.Mockito.lenient;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.mockStatic;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
+import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
+import com.rauio.smartdangjian.exception.BusinessException;
+import com.rauio.smartdangjian.security.CurrentUserPrincipal;
+import com.rauio.smartdangjian.server.content.constants.CategoryErrorConstants;
+import com.rauio.smartdangjian.server.content.mapper.CategoryMapper;
+import com.rauio.smartdangjian.server.content.pojo.convertor.CategoryConvertor;
+import com.rauio.smartdangjian.server.content.pojo.entity.Category;
+import com.rauio.smartdangjian.server.content.pojo.request.CategoryRequest;
+import com.rauio.smartdangjian.server.content.pojo.response.CategoryResponse;
+import com.rauio.smartdangjian.utils.SecurityUtils;
+import com.rauio.smartdangjian.utils.spec.UserType;
 
 @ExtendWith(MockitoExtension.class)
 class CategoryServiceTest {
@@ -81,31 +82,31 @@ class CategoryServiceTest {
     @DisplayName("get 查询存在的目录且无子节点时返回 VO")
     void getWhenCategoryExistsAndNoChildrenReturnsVO() {
         Category category = createCategory("1", "根目录", 0, null);
-        CategoryVO vo = createCategoryVO("1", "根目录", null, null);
+        CategoryResponse vo = createCategoryResponse("1", "根目录", null, null);
 
         doReturn(category).when(categoryService).getById("1");
-        doReturn(vo).when(convertor).toVO(category);
+        doReturn(vo).when(convertor).toResponse(category);
 
-        CategoryVO result = categoryService.get("1");
+        CategoryResponse result = categoryService.get("1");
 
         assertThat(result).isNotNull();
         assertThat(result.getId()).isEqualTo("1");
         assertThat(result.getName()).isEqualTo("根目录");
-        verify(convertor).toVO(category);
+        verify(convertor).toResponse(category);
     }
 
     @Test
     @DisplayName("get 查询目录存在且有子节点时不发生子节点递归（子节点无更深层子节点）")
     void getWhenCategoryHasChildrenWithoutGrandchildren() {
         Category category = createCategory("1", "根目录", 0, null);
-        CategoryVO childVO1 = createCategoryVO("2", "子目录1", "1", Collections.emptyList());
-        CategoryVO childVO2 = createCategoryVO("3", "子目录2", "1", Collections.emptyList());
-        CategoryVO parentVO = createCategoryVO("1", "根目录", null, List.of(childVO1, childVO2));
+        CategoryResponse childVO1 = createCategoryResponse("2", "子目录1", "1", Collections.emptyList());
+        CategoryResponse childVO2 = createCategoryResponse("3", "子目录2", "1", Collections.emptyList());
+        CategoryResponse parentVO = createCategoryResponse("1", "根目录", null, List.of(childVO1, childVO2));
 
         doReturn(category).when(categoryService).getById("1");
-        doReturn(parentVO).when(convertor).toVO(category);
+        doReturn(parentVO).when(convertor).toResponse(category);
 
-        CategoryVO result = categoryService.get("1");
+        CategoryResponse result = categoryService.get("1");
 
         assertThat(result).isNotNull();
         assertThat(result.getChildren()).hasSize(2);
@@ -119,20 +120,20 @@ class CategoryServiceTest {
         Category category = createCategory("1", "根目录", 0, null);
         Category childCategory = createCategory("2", "子目录", 1, "1");
 
-        CategoryVO grandchildVO = createCategoryVO("4", "孙子目录", "2", Collections.emptyList());
-        CategoryVO childVO = createCategoryVO("2", "子目录", "1", List.of(grandchildVO));
-        CategoryVO leafChildVO = createCategoryVO("3", "叶子子目录", "1", Collections.emptyList());
-        CategoryVO parentVO = createCategoryVO("1", "根目录", null, List.of(childVO, leafChildVO));
+        CategoryResponse grandchildVO = createCategoryResponse("4", "孙子目录", "2", Collections.emptyList());
+        CategoryResponse childVO = createCategoryResponse("2", "子目录", "1", List.of(grandchildVO));
+        CategoryResponse leafChildVO = createCategoryResponse("3", "叶子子目录", "1", Collections.emptyList());
+        CategoryResponse parentVO = createCategoryResponse("1", "根目录", null, List.of(childVO, leafChildVO));
 
-        CategoryVO retrievedChildVO = createCategoryVO("2", "子目录", "1", List.of(grandchildVO));
+        CategoryResponse retrievedChildVO = createCategoryResponse("2", "子目录", "1", List.of(grandchildVO));
 
         doReturn(category).when(categoryService).getById("1");
-        doReturn(parentVO).when(convertor).toVO(category);
+        doReturn(parentVO).when(convertor).toResponse(category);
         // 递归调用 get("2") 时
         doReturn(childCategory).when(categoryService).getById("2");
-        doReturn(retrievedChildVO).when(convertor).toVO(childCategory);
+        doReturn(retrievedChildVO).when(convertor).toResponse(childCategory);
 
-        CategoryVO result = categoryService.get("1");
+        CategoryResponse result = categoryService.get("1");
 
         assertThat(result).isNotNull();
         verify(categoryService, times(1)).getById("1");
@@ -144,19 +145,16 @@ class CategoryServiceTest {
     @Test
     @DisplayName("getRootList 返回所有顶级目录的 VO 列表")
     void getRootListReturnsVOList() {
-        List<Category> rootCategories = List.of(
-                createCategory("1", "根目录1", 0, null),
-                createCategory("2", "根目录2", 0, null)
-        );
-        List<CategoryVO> rootVOs = List.of(
-                createCategoryVO("1", "根目录1", null, Collections.emptyList()),
-                createCategoryVO("2", "根目录2", null, Collections.emptyList())
-        );
+        List<Category> rootCategories =
+                List.of(createCategory("1", "根目录1", 0, null), createCategory("2", "根目录2", 0, null));
+        List<CategoryResponse> rootVOs = List.of(
+                createCategoryResponse("1", "根目录1", null, Collections.emptyList()),
+                createCategoryResponse("2", "根目录2", null, Collections.emptyList()));
 
         doReturn(rootCategories).when(categoryService).list(any(LambdaQueryWrapper.class));
-        doReturn(rootVOs).when(convertor).toVOList(rootCategories);
+        doReturn(rootVOs).when(convertor).toResponseList(rootCategories);
 
-        List<CategoryVO> result = categoryService.getRootList();
+        List<CategoryResponse> result = categoryService.getRootList();
 
         assertThat(result).hasSize(2);
         assertThat(result.get(0).getName()).isEqualTo("根目录1");
@@ -168,19 +166,15 @@ class CategoryServiceTest {
     @Test
     @DisplayName("getByParentId 根据父目录 ID 返回直接子目录的 VO 列表")
     void getByParentIdReturnsVOList() {
-        List<Category> children = List.of(
-                createCategory("2", "子目录1", 1, "1"),
-                createCategory("3", "子目录2", 1, "1")
-        );
-        List<CategoryVO> childVOs = List.of(
-                createCategoryVO("2", "子目录1", "1", Collections.emptyList()),
-                createCategoryVO("3", "子目录2", "1", Collections.emptyList())
-        );
+        List<Category> children = List.of(createCategory("2", "子目录1", 1, "1"), createCategory("3", "子目录2", 1, "1"));
+        List<CategoryResponse> childVOs = List.of(
+                createCategoryResponse("2", "子目录1", "1", Collections.emptyList()),
+                createCategoryResponse("3", "子目录2", "1", Collections.emptyList()));
 
         doReturn(children).when(categoryService).list(any(LambdaQueryWrapper.class));
-        doReturn(childVOs).when(convertor).toVOList(children);
+        doReturn(childVOs).when(convertor).toResponseList(children);
 
-        List<CategoryVO> result = categoryService.getByParentId("1");
+        List<CategoryResponse> result = categoryService.getByParentId("1");
 
         assertThat(result).hasSize(2);
         assertThat(result.get(0).getParentId()).isEqualTo("1");
@@ -205,7 +199,10 @@ class CategoryServiceTest {
     @DisplayName("create 当前用户为 null 时抛出 BusinessException 3006")
     void createWhenCurrentUserIsNullThrowsBusinessException() {
         securityUtilsMock.when(SecurityUtils::getCurrentUser).thenReturn(null);
-        CategoryDto dto = CategoryDto.builder().name("根目录").childrenNode(Collections.emptyList()).build();
+        CategoryRequest dto = CategoryRequest.builder()
+                .name("根目录")
+                .childrenNode(Collections.emptyList())
+                .build();
         Category category = createCategory(null, "根目录", 0, null);
         doReturn(category).when(convertor).toEntity(dto);
 
@@ -223,7 +220,10 @@ class CategoryServiceTest {
     void createWhenUserIsManagerThrowsBusinessException() {
         CurrentUserPrincipal managerUser = createMockUser(UserType.MANAGER, null);
         securityUtilsMock.when(SecurityUtils::getCurrentUser).thenReturn(managerUser);
-        CategoryDto dto = CategoryDto.builder().name("根目录").childrenNode(Collections.emptyList()).build();
+        CategoryRequest dto = CategoryRequest.builder()
+                .name("根目录")
+                .childrenNode(Collections.emptyList())
+                .build();
         Category category = createCategory(null, "根目录", 0, null);
         doReturn(category).when(convertor).toEntity(dto);
 
@@ -241,7 +241,10 @@ class CategoryServiceTest {
     void createWhenSchoolUserAndNoChildrenCreatesSuccessfully() {
         CurrentUserPrincipal schoolUser = createMockUser(UserType.SCHOOL, "uni123");
         securityUtilsMock.when(SecurityUtils::getCurrentUser).thenReturn(schoolUser);
-        CategoryDto dto = CategoryDto.builder().name("根目录").childrenNode(Collections.emptyList()).build();
+        CategoryRequest dto = CategoryRequest.builder()
+                .name("根目录")
+                .childrenNode(Collections.emptyList())
+                .build();
         Category category = createCategory(null, "根目录", null, null);
         doReturn(category).when(convertor).toEntity(dto);
         doReturn(true).when(categoryService).save(any(Category.class));
@@ -260,7 +263,10 @@ class CategoryServiceTest {
     void createWhenStudentUserAndNoChildrenCreatesSuccessfully() {
         CurrentUserPrincipal studentUser = createMockUser(UserType.STUDENT, "uni456");
         securityUtilsMock.when(SecurityUtils::getCurrentUser).thenReturn(studentUser);
-        CategoryDto dto = CategoryDto.builder().name("根目录").childrenNode(new ArrayList<>()).build();
+        CategoryRequest dto = CategoryRequest.builder()
+                .name("根目录")
+                .childrenNode(new ArrayList<>())
+                .build();
         Category category = createCategory(null, "根目录", null, null);
         doReturn(category).when(convertor).toEntity(dto);
         doReturn(true).when(categoryService).save(any(Category.class));
@@ -276,9 +282,13 @@ class CategoryServiceTest {
     void createWithChildrenDelegatesToCreateByParentId() {
         CurrentUserPrincipal schoolUser = createMockUser(UserType.SCHOOL, "uni123");
         securityUtilsMock.when(SecurityUtils::getCurrentUser).thenReturn(schoolUser);
-        CategoryDto childDto = CategoryDto.builder().name("子目录").childrenNode(Collections.emptyList()).build();
-        List<CategoryDto> children = List.of(childDto);
-        CategoryDto dto = CategoryDto.builder().name("根目录").childrenNode(children).build();
+        CategoryRequest childDto = CategoryRequest.builder()
+                .name("子目录")
+                .childrenNode(Collections.emptyList())
+                .build();
+        List<CategoryRequest> children = List.of(childDto);
+        CategoryRequest dto =
+                CategoryRequest.builder().name("根目录").childrenNode(children).build();
         Category category = createCategory("parent1", "根目录", null, null);
         doReturn(category).when(convertor).toEntity(dto);
         doReturn(true).when(categoryService).save(any(Category.class));
@@ -304,9 +314,10 @@ class CategoryServiceTest {
     void createByParentIdWhenParentNotFoundThrowsBusinessException() {
         doReturn(null).when(categoryService).getById("parent1");
 
-        List<CategoryDto> children = List.of(
-                CategoryDto.builder().name("子目录").childrenNode(Collections.emptyList()).build()
-        );
+        List<CategoryRequest> children = List.of(CategoryRequest.builder()
+                .name("子目录")
+                .childrenNode(Collections.emptyList())
+                .build());
 
         assertThatThrownBy(() -> categoryService.createByParentId(children, "parent1"))
                 .isInstanceOf(BusinessException.class)
@@ -337,9 +348,10 @@ class CategoryServiceTest {
         Category parent = createCategory("parent1", "父目录", 3, null);
         doReturn(parent).when(categoryService).getById("parent1");
 
-        List<CategoryDto> children = List.of(
-                CategoryDto.builder().name("子目录").childrenNode(Collections.emptyList()).build()
-        );
+        List<CategoryRequest> children = List.of(CategoryRequest.builder()
+                .name("子目录")
+                .childrenNode(Collections.emptyList())
+                .build());
 
         assertThatThrownBy(() -> categoryService.createByParentId(children, "parent1"))
                 .isInstanceOf(BusinessException.class)
@@ -358,8 +370,11 @@ class CategoryServiceTest {
         parent.setUniversityId("uni123");
         doReturn(parent).when(categoryService).getById("parent1");
 
-        CategoryDto childDto = CategoryDto.builder().name("超限子目录").childrenNode(Collections.emptyList()).build();
-        List<CategoryDto> children = List.of(childDto);
+        CategoryRequest childDto = CategoryRequest.builder()
+                .name("超限子目录")
+                .childrenNode(Collections.emptyList())
+                .build();
+        List<CategoryRequest> children = List.of(childDto);
         Category childEntity = createCategory(null, "超限子目录", null, null);
         doReturn(childEntity).when(convertor).toEntity(childDto);
 
@@ -378,8 +393,12 @@ class CategoryServiceTest {
         parent.setUniversityId("uni123");
         doReturn(parent).when(categoryService).getById("parent1");
 
-        CategoryDto childDto = CategoryDto.builder().name("子目录").description("子目录描述").childrenNode(Collections.emptyList()).build();
-        List<CategoryDto> children = List.of(childDto);
+        CategoryRequest childDto = CategoryRequest.builder()
+                .name("子目录")
+                .description("子目录描述")
+                .childrenNode(Collections.emptyList())
+                .build();
+        List<CategoryRequest> children = List.of(childDto);
         Category childEntity = createCategory(null, "子目录", null, null);
         doReturn(childEntity).when(convertor).toEntity(childDto);
         doReturn(true).when(categoryService).save(any(Category.class));
@@ -400,9 +419,15 @@ class CategoryServiceTest {
         parent.setUniversityId("uni123");
         doReturn(parent).when(categoryService).getById("parent1");
 
-        CategoryDto child1 = CategoryDto.builder().name("子目录1").childrenNode(Collections.emptyList()).build();
-        CategoryDto child2 = CategoryDto.builder().name("子目录2").childrenNode(Collections.emptyList()).build();
-        List<CategoryDto> children = List.of(child1, child2);
+        CategoryRequest child1 = CategoryRequest.builder()
+                .name("子目录1")
+                .childrenNode(Collections.emptyList())
+                .build();
+        CategoryRequest child2 = CategoryRequest.builder()
+                .name("子目录2")
+                .childrenNode(Collections.emptyList())
+                .build();
+        List<CategoryRequest> children = List.of(child1, child2);
 
         Category entity1 = createCategory(null, "子目录1", null, null);
         Category entity2 = createCategory(null, "子目录2", null, null);
@@ -424,9 +449,15 @@ class CategoryServiceTest {
         parent.setUniversityId("uni123");
         doReturn(parent).when(categoryService).getById("parent1");
 
-        CategoryDto grandchildDto = CategoryDto.builder().name("孙子目录").childrenNode(Collections.emptyList()).build();
-        CategoryDto childDto = CategoryDto.builder().name("子目录").childrenNode(List.of(grandchildDto)).build();
-        List<CategoryDto> children = List.of(childDto);
+        CategoryRequest grandchildDto = CategoryRequest.builder()
+                .name("孙子目录")
+                .childrenNode(Collections.emptyList())
+                .build();
+        CategoryRequest childDto = CategoryRequest.builder()
+                .name("子目录")
+                .childrenNode(List.of(grandchildDto))
+                .build();
+        List<CategoryRequest> children = List.of(childDto);
 
         Category childEntity = createCategory("child1", "子目录", null, null);
         Category grandchildEntity = createCategory(null, "孙子目录", null, null);
@@ -450,7 +481,8 @@ class CategoryServiceTest {
     @DisplayName("delete 目录有子目录时抛出 BusinessException 3005")
     void deleteWhenHasChildrenThrowsBusinessException() {
         doReturn(List.of(createCategory("child1", "子目录", 1, "parent1")))
-                .when(categoryService).list(any(LambdaQueryWrapper.class));
+                .when(categoryService)
+                .list(any(LambdaQueryWrapper.class));
 
         assertThatThrownBy(() -> categoryService.delete("parent1"))
                 .isInstanceOf(BusinessException.class)
@@ -521,7 +553,7 @@ class CategoryServiceTest {
     @DisplayName("update 目录不存在时抛出 BusinessException 3001")
     void updateWhenCategoryNotFoundThrowsBusinessException() {
         doReturn(null).when(categoryService).getById("nonexistent");
-        CategoryDto dto = CategoryDto.builder().name("更新名称").build();
+        CategoryRequest dto = CategoryRequest.builder().name("更新名称").build();
 
         assertThatThrownBy(() -> categoryService.update(dto, "nonexistent"))
                 .isInstanceOf(BusinessException.class)
@@ -539,7 +571,8 @@ class CategoryServiceTest {
         existing.setUniversityId("uni123");
         doReturn(existing).when(categoryService).getById("1");
 
-        CategoryDto dto = CategoryDto.builder().name("新名称").description("新描述").build();
+        CategoryRequest dto =
+                CategoryRequest.builder().name("新名称").description("新描述").build();
         Category updatedEntity = createCategory(null, "新名称", null, null);
         doReturn(updatedEntity).when(convertor).toEntity(dto);
         doReturn(true).when(categoryService).updateById(any(Category.class));
@@ -565,8 +598,9 @@ class CategoryServiceTest {
         return category;
     }
 
-    private CategoryVO createCategoryVO(String id, String name, String parentId, List<CategoryVO> children) {
-        CategoryVO vo = new CategoryVO();
+    private CategoryResponse createCategoryResponse(
+            String id, String name, String parentId, List<CategoryResponse> children) {
+        CategoryResponse vo = new CategoryResponse();
         vo.setId(id);
         vo.setName(name);
         vo.setParentId(parentId);
